--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
+<div *ngIf="watchNgIf">trueを設定しているので、このテキストが出力されます。</div>
+
 <ul>
-  <li *ngFor="let item of items">{{item}}</li>
+  <li *ngFor="watchNgFor">{{item}}</li>
 </ul>
+
+<div [ngSwitch]="value">
+  <p *ngSwitchCase="'A'">Aを設定しているのでこのテキストが出力されます。</p>
+  <p *ngSwitchCase="'B'">Bを設定しているのでこのテキストが出力されます。</p>
+  <p *ngSwitchDefault>その他を設定しているのでこのテキストが出力されます。</p>
+</div>
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
