--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
   <p *ngSwitchDefault>その他を設定しているのでこのテキストが出力されます。</p>
 </div>
 
+<button *ngIf="isButtonVisible" (click)="toggleButtonVisibility()">表示</button>
+<button *ngIf="!isButtonVisible" (click)="toggleButtonVisibility()">非表示</button>
+
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
