--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="watchNgIf">trueを設定しているので、このテキストが出力されます。</div>
 
 <ul>
-  <li *ngFor="let watchNgFor of watchNgFors">{{watchNgFors}}</li>
+  <li *ngFor="let watchNgFor of watchNgFors">{{watchNgFor}}</li>
 </ul>
 
 <div [ngSwitch]="value">
