--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <p *ngSwitchDefault>その他を設定しているのでこのテキストが出力されます。</p>
 </div>
 
+<p>以下のボタンを押下すると表示/非表示が切り替わります。</p>
 <button *ngIf="isButtonVisible" (click)="toggleButtonVisibility()">表示</button>
 <button *ngIf="!isButtonVisible" (click)="toggleButtonVisibility()">非表示</button>
 
