--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
 <button *ngIf="isButtonVisible" (click)="toggleButtonVisibility()">表示</button>
 <button *ngIf="!isButtonVisible" (click)="toggleButtonVisibility()">非表示</button>
 
+<!-- ここまでが構造ディレクティブ、以降は属性ディレクティブ -->
+
+
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
