--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,18 @@
 
 <!-- ここまでが構造ディレクティブ、以降は属性ディレクティブ -->
 
+<div class="name-list">
+  <ng-container *ngIf="names && names.length; else noName">
+    <div *ngFor="let name of names">
+      <h2>{{ name.name }}</h2>
+      <p>{{ name.description }}</p>
+    </div>
+  </ng-container>
 
+  <ng-template #noName>
+    <p>nameリストが存在しないのでこのテキストが出力されます。</p>
+  </ng-template>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
