--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 <button *ngIf="isButtonVisible" (click)="toggleButtonVisibility()">表示</button>
 <button *ngIf="!isButtonVisible" (click)="toggleButtonVisibility()">非表示</button>
 
-<!-- ここまでが構造ディレクティブ、以降は属性ディレクティブ -->
+<!-- ここまで構造ディレクティブ、以降は属性ディレクティブ -->
 
 <div class="name-list">
   <ng-container *ngIf="names && names.length; else noName">
