--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,15 @@
 
 <!-- ここまで構造ディレクティブ、以降は属性ディレクティブ -->
 
+<!-- ngStyleで以下の要素に対してスタイルを付与している。 -->
+<div [ngStyle]="{ 'background-color': color }">
+  ngStyleでこの要素に対して背景色を付与しています。
+</div>
+
+
+
+
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
