--- a/src/styles.css
+++ b/src/styles.css
@@ -90,6 +90,11 @@ input[type="text"] {
   height: 50px;
 }
 
+.title{
+  font-weight: bold;
+  font-size: 30px;
+}
+
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
